// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printToDot: computedAmazonView 1`] = `
"digraph {
  compound = true;
  pad = 0.07;
  rankdir = "TB";
  nodesep = 0.9375;
  ranksep = 0.9375;
  layout = "dot";
  TBbalance = "min";
  fontname = "Helvetica";
  fontsize = 12;
  graph [
    fontname = "Helvetica";
  ];
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#707070";
    fontcolor = "#707070";
    headport = "_";
    tailport = "_";
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333333333333335;
    height = 1.875;
    color = "#6b6b6b";
    fillcolor = "#999999";
    fontcolor = "#ffffff";
    style = "filled";
    margin = "0.4,0.3";
  ];
  subgraph "cluster_1" {
    id = "cloud";
    labeljust = "l";
    fontsize = 9;
    label = <<B>CLOUD</B>>;
    margin = 20;
    "nd2" [
      id = "cloud.backend";
      label = <<FONT point-size="13.5">Backend<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT>>;
    ];
  }
  subgraph "cluster_3" {
    id = "amazon";
    labeljust = "l";
    fontsize = 9;
    label = <<B>AMAZON</B>>;
    margin = 20;
    "nd4" [
      id = "amazon.s3";
      label = <<FONT point-size="13.5">S3<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT><FONT point-size="10.5"> <BR/></FONT><FONT point-size="10.5">S3 is a storage service<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT></FONT>>;
    ];
  }
  "nd2" -> "nd4" [
    id = "cloud.backend:amazon.s3";
    label = <<FONT point-size="10.5">persists artifacts<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
}"
`;

exports[`printToDot: computedCloud3levels 1`] = `
"digraph {
  compound = true;
  pad = 0.07;
  rankdir = "TB";
  nodesep = 0.9375;
  ranksep = 0.9375;
  layout = "dot";
  TBbalance = "min";
  fontname = "Helvetica";
  fontsize = 12;
  graph [
    fontname = "Helvetica";
  ];
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#707070";
    fontcolor = "#707070";
    headport = "_";
    tailport = "_";
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333333333333335;
    height = 1.875;
    color = "#6b6b6b";
    fillcolor = "#999999";
    fontcolor = "#ffffff";
    style = "filled";
    margin = "0.4,0.3";
  ];
  "nd1" [
    id = "customer";
    label = <<FONT point-size="13.5">customer<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT>>;
  ];
  "nd2" [
    id = "support";
    label = <<FONT point-size="13.5">Support Engineer<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT><FONT point-size="10.5"> <BR/></FONT><FONT point-size="10.5">Support engineers are responsible for<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT>supporting customers<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT></FONT>>;
  ];
  "nd9" [
    id = "amazon";
    label = <<FONT point-size="13.5">Amazon<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT><FONT point-size="10.5"> <BR/></FONT><FONT point-size="10.5">Amazon is a cloud provider<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT></FONT>>;
  ];
  subgraph "cluster_3" {
    id = "cloud";
    labeljust = "l";
    fontsize = 9;
    label = <<B>CLOUD</B>>;
    margin = 30;
    "nd4" [
      id = "cloud.frontend.adminPanel";
      label = <<FONT point-size="13.5">Admin Panel Webapp<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT><FONT point-size="10.5"> <BR/></FONT><FONT point-size="10.5">The admin panel is a webapp that allows<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT>support staff to manage customer data.<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT></FONT>>;
    ];
    "nd5" [
      id = "cloud.frontend.dashboard";
      label = <<FONT point-size="13.5">Customer Dashboard Webapp<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT><FONT point-size="10.5"> <BR/></FONT><FONT point-size="10.5">The customer dashboard is a webapp that<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT>allows customers to view their data.<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT></FONT>>;
    ];
    subgraph "cluster_6" {
      id = "cloud.backend";
      labeljust = "l";
      fontsize = 9;
      label = <<B>BACKEND</B>>;
      margin = 20;
      "nd7" [
        id = "cloud.backend.graphql";
        label = <<FONT point-size="13.5">Graphql API<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT><FONT point-size="10.5"> <BR/></FONT><FONT point-size="10.5">Component that allows to query data via<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT>GraphQL.<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT></FONT>>;
      ];
      "nd8" [
        id = "cloud.backend.storage";
        label = <<FONT point-size="13.5">Backend Storage<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT><FONT point-size="10.5"> <BR/></FONT><FONT point-size="10.5">The backend storage is a component that<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT>stores data.<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT></FONT>>;
      ];
    }
  }
  "nd4" -> "nd7" [
    id = "cloud.frontend.adminPanel:cloud.backend.graphql";
    label = <<FONT point-size="10.5">fetches data in zero trust network with<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT>sso authentification<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
  "nd5" -> "nd7" [
    id = "cloud.frontend.dashboard:cloud.backend.graphql";
    label = <<FONT point-size="10.5">fetches data<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
  "nd7" -> "nd8" [
    id = "cloud.backend.graphql:cloud.backend.storage";
    minlen = 0;
  ];
  "nd8" -> "nd9" [
    id = "cloud.backend.storage:amazon";
    label = <<FONT point-size="10.5">persists artifacts<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
  "nd1" -> "nd5" [
    id = "customer:cloud.frontend.dashboard";
    label = <<FONT point-size="10.5">opens in browser<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
  "nd2" -> "nd4" [
    id = "support:cloud.frontend.adminPanel";
    label = <<FONT point-size="10.5">manages<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
}"
`;

exports[`printToDot: computedCloudView 1`] = `
"digraph {
  compound = true;
  pad = 0.07;
  rankdir = "TB";
  nodesep = 0.9375;
  ranksep = 0.9375;
  layout = "dot";
  TBbalance = "min";
  fontname = "Helvetica";
  fontsize = 12;
  graph [
    fontname = "Helvetica";
  ];
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#707070";
    fontcolor = "#707070";
    headport = "_";
    tailport = "_";
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333333333333335;
    height = 1.875;
    color = "#6b6b6b";
    fillcolor = "#999999";
    fontcolor = "#ffffff";
    style = "filled";
    margin = "0.4,0.3";
  ];
  "nd1" [
    id = "customer";
    label = <<FONT point-size="13.5">customer<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT>>;
  ];
  "nd2" [
    id = "support";
    label = <<FONT point-size="13.5">Support Engineer<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT><FONT point-size="10.5"> <BR/></FONT><FONT point-size="10.5">Support engineers are responsible for<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT>supporting customers<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT></FONT>>;
  ];
  "nd6" [
    id = "amazon";
    label = <<FONT point-size="13.5">Amazon<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT><FONT point-size="10.5"> <BR/></FONT><FONT point-size="10.5">Amazon is a cloud provider<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT></FONT>>;
  ];
  subgraph "cluster_3" {
    id = "cloud";
    labeljust = "l";
    fontsize = 9;
    label = <<B>CLOUD</B>>;
    margin = 20;
    "nd4" [
      id = "cloud.frontend";
      label = <<FONT point-size="13.5">Frontend<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT>>;
    ];
    "nd5" [
      id = "cloud.backend";
      label = <<FONT point-size="13.5">Backend<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT>>;
    ];
  }
  "nd4" -> "nd5" [
    id = "cloud.frontend:cloud.backend";
    label = <<FONT point-size="10.5">fetches data<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
    minlen = 0;
  ];
  "nd5" -> "nd6" [
    id = "cloud.backend:amazon";
    label = <<FONT point-size="10.5">persists artifacts<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
  "nd1" -> "nd4" [
    id = "customer:cloud.frontend";
    label = <<FONT point-size="10.5">opens in browser<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
  "nd2" -> "nd4" [
    id = "support:cloud.frontend";
    label = <<FONT point-size="10.5">manages<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
}"
`;

exports[`printToDot: computedIndexView 1`] = `
"digraph {
  compound = true;
  pad = 0.07;
  rankdir = "TB";
  nodesep = 0.9375;
  ranksep = 0.9375;
  layout = "dot";
  TBbalance = "min";
  fontname = "Helvetica";
  fontsize = 12;
  graph [
    fontname = "Helvetica";
  ];
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#707070";
    fontcolor = "#707070";
    headport = "_";
    tailport = "_";
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333333333333335;
    height = 1.875;
    color = "#6b6b6b";
    fillcolor = "#999999";
    fontcolor = "#ffffff";
    style = "filled";
    margin = "0.4,0.3";
  ];
  "nd1" [
    id = "customer";
    label = <<FONT point-size="13.5">customer<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT>>;
  ];
  "nd2" [
    id = "support";
    label = <<FONT point-size="13.5">Support Engineer<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT><FONT point-size="10.5"> <BR/></FONT><FONT point-size="10.5">Support engineers are responsible for<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT>supporting customers<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT></FONT>>;
  ];
  "nd3" [
    id = "cloud";
    label = <<FONT point-size="13.5">cloud<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT>>;
  ];
  "nd4" [
    id = "amazon";
    label = <<FONT point-size="13.5">Amazon<FONT point-size="15"> <BR ALIGN="CENTER"/></FONT></FONT><FONT point-size="10.5"> <BR/></FONT><FONT point-size="10.5">Amazon is a cloud provider<FONT point-size="12"> <BR ALIGN="CENTER"/></FONT></FONT>>;
  ];
  "nd3" -> "nd4" [
    id = "cloud:amazon";
    label = <<FONT point-size="10.5">persists artifacts<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
  "nd1" -> "nd3" [
    id = "customer:cloud";
    label = <<FONT point-size="10.5">opens in browser<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
  "nd2" -> "nd3" [
    id = "support:cloud";
    label = <<FONT point-size="10.5">manages<FONT point-size="12"> <BR ALIGN="LEFT"/></FONT></FONT>>;
    nojustify = true;
  ];
}"
`;
